[package]
name = "sphinxcrypto"
version = "0.0.19"
authors = ["David Stainton <dstainton415@gmail.com>"]
description = "Sphinx cryptographic packet format library"
homepage = "https://github.com/sphinx-cryptography/rust-sphinxcrypto"
repository = "https://github.com/sphinx-cryptography/rust-sphinxcrypto"
documentation = "https://docs.rs/sphinxcrypto/"
readme = "README.md"
keywords = ["cryptography", "sphinx", "mixnet", "crypto", "mix"]
license = "AGPL-3.0-only"

[dependencies]
aez = "0.0.6"
ecdh_wrapper = "0.0.9"
arrayref = "^0.3.5"
byteorder = "1.2.6"
rand = "^0.4.2"
hkdf = "0.7.0"
keystream = "^1.0.0"
aes-ctr = "0.3.0"
sha2 = "0.8.0"
blake2b_simd = "0.5.4"
subtle = { version = "2", default-features = false }

[features]
nightly = ["subtle/nightly"]
std = ["subtle/std"]

[dev-dependencies]
rand = "^0.4.2"
rustc-serialize = "0.3"
criterion = "0.2"
serde_derive = "1.0.94"
serde = "1.0.94"
serde_json = "1.0.40"
hex = "0.3.2"

[[bench]]
name = "sphinx_decrypt_benchmark"
harness = false