[package]
name = "sphinxcrypto"
version = "0.1.1"
authors = ["David Stainton <dstainton415@gmail.com>"]
description = "Sphinx cryptographic packet format library"
homepage = "https://github.com/sphinx-cryptography/rust-sphinxcrypto"
repository = "https://github.com/sphinx-cryptography/rust-sphinxcrypto"
documentation = "https://docs.rs/sphinxcrypto/"
readme = "README.md"
keywords = ["cryptography", "sphinx", "mixnet", "crypto", "mix"]
license = "AGPL-3.0-only"

[dependencies]
aez = "0.0.7"
arrayref = "^0.3.6"
byteorder = "1.2.6"
keystream = "^1.0.0"
aes-ctr = "0.3.0"
hmac = "0.7.1"
sha2 = "0.8.0"
hkdf = "0.8.0"
digest = "0.8.1"
rand = "0.8.3"
rand_core = { version = "0.6", default-features = false }
x25519-dalek-ng = { git = "https://github.com/sphinx-cryptography/x25519-dalek-ng.git", branch = "master" }
subtle = { package = "subtle-ng", version = "2.4.1" }

[features]
nightly = ["subtle/nightly"]
default = ["std"]
std = ["subtle/std"]

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }
rand = "0.8.3"
rustc-serialize = "0.3"
criterion = "0.3.0"
serde_derive = "1.0.94"
serde = "1.0.94"
serde_json = "1.0.40"
hex = "0.3.2"

[[bench]]
name = "sphinx_decrypt_benchmark"
harness = false